--- a/_posts/2019-7-12-推荐系统.md
+++ b/_posts/2019-7-12-推荐系统.md
@@ -31,9 +31,9 @@ categories: 编程
 
    其中r=1时，上述公式计算的是曼哈顿距离
 
-   其中r=2时，上述公式计算的是曼欧式距离
+   其中r=2时，上述公式计算的是欧式距离
 
-   其中r=$\infty$时，上述公式计算的是曼欧式距离
+   其中r=$\infty$时，上述公式计算的是明氏距离
 
    **r越大，某一维度上较大的差异对最终的差值影响越大**
 
