--- a/_posts/2019-7-12-推荐系统.md
+++ b/_posts/2019-7-12-推荐系统.md
@@ -5,13 +5,21 @@ tags: [python, 推荐系统]
 categories: 编程
 ---
 
-#### 协同过滤 collaborative filtering
+* content
+{:toc}
+
+## 协同过滤 collaborative filtering
 
 之所以称之为“协同”是因为该方法基于其他用户进行推荐。其工作流程如下：
 
 假设要完成的任务是推荐一本书给你，那么系统会在网站上搜索与你兴趣类似的其他用户，一旦找到这个用户，就看看这个用户喜欢的书，然后推荐给你。
 
-##### 计算不同用户之间的距离：
+
+
+
+
+
+##### 计算不同用户之间的距离
 
 1. 曼哈顿距离 Manhattan Distance
 
@@ -37,19 +45,4 @@ categories: 编程
 
    **r越大，某一维度上较大的差异对最终的差值影响越大**
 
-```python
-# Minkowski Distance
-def manhattan(rating1,rating2,r):
-  distance = 0
-  commonrating = False
-  for key in rating1:
-    if key in rating2:
-      distance += pow(abs(rating1[key] - rating2[key]),r)
-      commonrating = True
-   if commonrating:
-    	return pow(distance,1/r)
-    else:
-      return 0
-
-```
 
