--- a/_posts/2019-7-13-mysql忘记密码.md
+++ b/_posts/2019-7-13-mysql忘记密码.md
@@ -5,6 +5,8 @@ tags: mysql 密码
 categories: 软件工具
 ---
 
+* content
+{:toc}
 
 ## Mysql
 
@@ -14,7 +16,7 @@ ubuntu系统下mysql重置密码和修改密码操作
 
 
 
-### 在Linux系统下面忘记mysql密码时候的操作
+### 改密码前的操作
 
 1. 进入/etc/mysql/目录，并用root权限打开debian.cnf文件
 
