--- a/_posts/2019-7-12-推荐系统.md
+++ b/_posts/2019-7-12-推荐系统.md
@@ -3,6 +3,7 @@ layout: post
 title: 推荐系统
 tags: Python 推荐系统
 categories: 数据科学
+author: Lin
 ---
 
 * content
@@ -27,9 +28,7 @@ categories: 数据科学
 
 2. 欧式距离 Euclidean Distance
 
-   $$
-   \sqrt{\left(x_{1}-x_{2}\right)^{2}+\left(y_{1}-y_{2}\right)^{2}}
-   $$
+   $$\sqrt{\left(x_{1}-x_{2}\right)^{2}+\left(y_{1}-y_{2}\right)^{2}}$$
 
 3. 明氏距离 Minkowski Distance
 
@@ -44,5 +43,13 @@ categories: 数据科学
    其中r=$\infty$时，上述公式计算的是明氏距离
 
    **r越大，某一维度上较大的差异对最终的差值影响越大**
+
+
+
+```python
+def hello(name):
+  print("hello" + name)
+```
+
 
 
