--- a/_posts/2019-7-12-推荐系统.md
+++ b/_posts/2019-7-12-推荐系统.md
@@ -4,6 +4,7 @@ title: 推荐系统
 tags: Python 推荐系统
 categories: 数据科学
 author: Lin
+stickie: true
 ---
 
 * content
@@ -45,11 +46,6 @@ author: Lin
    **r越大，某一维度上较大的差异对最终的差值影响越大**
 
 
-
-```python
-def hello(name):
-  print("hello" + name)
-```
 
 
 
