--- a/_posts/2019-8-17-机器学习资源.md
+++ b/_posts/2019-8-17-机器学习资源.md
@@ -1,3 +1,12 @@
+```
+layout: post
+title: 机器学习&深度学习资源
+tags: 机器学习 深度学习 资源
+categories: 读书笔记
+```
+
+
+
 ## 机器学习(Machine Learning)&深度学习(Deep Learning)资料(Chapter 1)
 
 ##### 注:机器学习资料[篇目一](https://github.com/ty4z2008/Qix/blob/master/dl.md)共500条,[篇目二](https://github.com/ty4z2008/Qix/blob/master/dl2.md)开始更新
