--- a/_posts/2019-8-17-机器学习资源.md
+++ b/_posts/2019-8-17-机器学习资源.md
@@ -1,11 +1,12 @@
-```
+---
 layout: post
 title: 机器学习&深度学习资源
 tags: 机器学习 深度学习 资源
 categories: 读书笔记
-```
+---
 
-
+* content
+{:toc}
 
 ### 机器学习(Machine Learning)&深度学习(Deep Learning)资料(Chapter 1)
 
