--- a/_posts/2019-8-17-机器学习资源.md
+++ b/_posts/2019-8-17-机器学习资源.md
@@ -1,3 +1,4 @@
+
 ---
 layout: post
 title: 机器学习&深度学习资源
@@ -8,12 +9,21 @@ categories: 读书笔记
 * content
 {:toc}
 
+
+搜集整理总结一些机器学习与深度学习的资料
+
+
+
+
+
+
 ### 机器学习(Machine Learning)&深度学习(Deep Learning)资料(Chapter 1)
 
 
-
-
 <!--break-->
+
+
+
 
 
 
